--- a/.gitconfig
+++ b/.gitconfig
@@ -167,3 +167,5 @@
 [mergetool "sourcetree"]
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+[coderabbit]
+	machineId = cli/60abdcb1e42347f4b3e64330412605d7
